02-traefik/redirect-schema.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https
  namespace: inventario
spec:
  redirectScheme:
    scheme: https
    port: "443"
    permanent: true
