02-traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.senatorkube.com`)
      kind: Rule
      middlewares:
        - name: dashboard-basic-auth
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: authsecret
